--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -24,4 +24,9 @@
       <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.7" />
     </ItemGroup>
 
+    <ItemGroup>
+      <_ContentIncludedByDefault Remove="Pages\EventPage\EventPage.cshtml" />
+      <_ContentIncludedByDefault Remove="Pages\EventPage\index.cshtml" />
+    </ItemGroup>
+
 </Project>
