Added info about events on the home page. Small improvements in other pages.

--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -29,4 +29,10 @@
       <_ContentIncludedByDefault Remove="Pages\EventPage\index.cshtml" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Include="wwwroot\images\libled.jpg" />
+      <None Include="wwwroot\images\pilt.jpg" />
+      <None Include="wwwroot\libled.jpg" />
+    </ItemGroup>
+
 </Project>
